<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_will_terminate">The application will be closed</string>
    <string name="app_name" translatable="false">DF Night Selfies</string>
    <string name="cant_get_front_camera">Cannot obtain front camera</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_text">"Welcome to DF Night Selfies! Tap anywhere to take a selfie. Share your photos with the hashtag #dfnightselfies Use the settings to change background color or timer duration. Use volume buttons to regulate preview size. If the photo is incorrectly rotated on your device, please enable the \"Rotation Fix\" setting. "</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="countdown_string_format" translatable="false">%ds</string>
    <string name="shutter_sound_preference" translatable="false">shutter_sound_preference</string>
    <string name="shutter_sound_preference_title">Camera shutter sound</string>
    <string name="countdown_preference" translatable="false">countdown_preference</string>
    <string name="countdown_preference_title">Timer duration</string>
    <string name="color_picker_preference" translatable="false">color_picker_preference</string>
    <string name="color_picker_preference_title">Background color</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="self_timer_default" translatable="false">3</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9989396213762768/1176835337</string>
    <string name="rotation_fix_preference" translatable="false">rotation_fix_preference</string>
    <string name="rotation_fix_preference_title">Rotation fix</string>
    <string name="info_dialog_title">Info</string>
    <string name="info_dialog_summary">Show application info</string>
    <string name="save_to_gallery_preference" translatable="false">save_to_gallery_preference</string>
    <string name="save_to_gallery_preference_title">Save to gallery</string>
    <string name="save_to_gallery_summary">Images will be saved to %s</string>
    <string name="save_to_gallery_folder" translatable="false">DFNightSelfies</string>
    <string name="take_with_volume_preference" translatable="false">take_with_volume_preference</string>
    <string name="take_with_volume_preference_title">Take picture with volume keys</string>
    <string name="take_with_volume_summary_true">Volume keys take picture</string>
    <string name="take_with_volume_summary_false">Volume keys resize preview</string>
    <string name="ratio_default" translatable="false">Any</string>
    <string name="ratio_preference" translatable="false">ratio</string>
    <string name="ratio_preference_title">Ratio</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="photo_or_video">Photo or video</string>
    <string name="preview">Preview</string>
    <string name="error_title">Error</string>
    <string name="permissions_needed">The application requires the Camera and Storage permissions to run</string>
    <string name="scale_factor_preference" translatable="false">scaleFactor</string>
    <string name="last_run_version_preference" translatable="false">lastRunVersion</string>
    <string name="picture_or_video_preference" translatable="false">picture_or_video_preference</string>
</resources>
