<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DFNightSelfiesMainActivity">

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="@dimen/buttons_size"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:layout_margin="10dp"
        android:background="#000000FF"
        android:src="@drawable/settings"
        android:contentDescription="@string/settings"
        tools:ignore="RtlHardcoded" />

    <ImageButton
        android:id="@+id/gallery"
        android:layout_width="@dimen/buttons_size"
        android:layout_height="wrap_content"
        android:layout_gravity="right|top"
        android:layout_margin="10dp"
        android:background="#000000FF"
        android:src="@drawable/gallery"
        android:contentDescription="@string/gallery"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="10dp"
        android:text="@string/countdown_string_format"
        android:textSize="@dimen/countdown_text_size"
        tools:ignore="RtlHardcoded" />

    <!-- frame containing camera preview -->
    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical" />

    <!-- frame used to show the photo -->
    <ImageView
        android:id="@+id/photoPreview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:contentDescription="@string/preview" />

    <include layout="@layout/buttons" />

    <include layout="@layout/buttons_intent" />

    <!-- frame to show shutter effect -->
    <FrameLayout
        android:id="@+id/shutterFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />
</FrameLayout>
