<?xml version="1.0" encoding="utf-8"?>


<!-- layout containing buttons -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/photoActionButtons"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    android:layout_marginBottom="10dp"
    android:layout_gravity="bottom"
    tools:showIn="@layout/fragment_dfnightselfies_main">

    <ImageButton
        android:id="@+id/share"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#00FFFFFF"
        android:src="@drawable/share"
        android:contentDescription="@string/share" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#00FFFFFF"
        android:src="@drawable/save"
        android:contentDescription="@string/save" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#00FFFFFF"
        android:src="@drawable/delete"
        android:contentDescription="@string/delete" />

</LinearLayout>