<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DFNightSelfiesMainActivity"
    android:id="@+id/main_layout"
    android:background="#ffffff">

    <!-- frame containing camera preview -->
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:layout_gravity="center_horizontal|center_vertical">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom">
        <ImageButton
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:src="@drawable/share"
            android:contentDescription="@string/share"/>
        <ImageButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:src="@drawable/save"
            android:contentDescription="@string/save"/>
        <ImageButton
            android:id="@+id/discard"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="#FFFFFF"
            android:src="@drawable/delete"
            android:contentDescription="@string/discard"/>
    </LinearLayout>
</FrameLayout>
